packages/win32/src/kernel32.g.h

MYLIB_EXPORT Win32Result GetLargestConsoleWindowSize_Wrapper(HANDLE hConsoleOutput);
MYLIB_EXPORT Win32Result GetLocaleInfoEx_Wrapper(PCWSTR lpLocaleName, unsigned long lCType, PWSTR lpLCData, int cchData);
MYLIB_EXPORT Win32Result GetLogicalDrives_Wrapper();
MYLIB_EXPORT Win32Result GetLogicalDriveStringsW_Wrapper(unsigned long nBufferLength, PWSTR lpBuffer);
MYLIB_EXPORT Win32Result GetLogicalProcessorInformation_Wrapper(SYSTEM_LOGICAL_PROCESSOR_INFORMATION* buffer, unsigned long* returnedLength);
MYLIB_EXPORT Win32Result GetLongPathNameW_Wrapper(PCWSTR lpszShortPath, PWSTR lpszLongPath, unsigned long cchBuffer);
MYLIB_EXPORT Win32Result GetMaximumProcessorCount_Wrapper(unsigned short groupNumber);
MYLIB_EXPORT Win32Result GetModuleFileNameW_Wrapper(HMODULE hModule, PWSTR lpFilename, unsigned long nSize);
MYLIB_EXPORT Win32Result GetModuleHandleW_Wrapper(PCWSTR lpModuleName);
MYLIB_EXPORT Win32Result GetModuleHandleExW_Wrapper(unsigned long dwFlags, PCWSTR lpModuleName, HMODULE* phModule);
MYLIB_EXPORT Win32Result GetNamedPipeClientProcessId_Wrapper(HANDLE pipe, unsigned long* clientProcessId);
MYLIB_EXPORT Win32Result GetNamedPipeClientSessionId_Wrapper(HANDLE pipe, unsigned long* clientSessionId);
MYLIB_EXPORT Win32Result GetNamedPipeInfo_Wrapper(HANDLE hNamedPipe, DWORD* lpFlags, unsigned long* lpOutBufferSize, unsigned long* lpInBufferSize, unsigned long* lpMaxInstances);
MYLIB_EXPORT Win32Result GetNumberOfConsoleInputEvents_Wrapper(HANDLE hConsoleInput, unsigned long* lpNumberOfEvents);
MYLIB_EXPORT Win32Result GetOverlappedResult_Wrapper(HANDLE hFile, OVERLAPPED* lpOverlapped, unsigned long* lpNumberOfBytesTransferred, BOOL bWait);
MYLIB_EXPORT Win32Result GetOverlappedResultEx_Wrapper(HANDLE hFile, OVERLAPPED* lpOverlapped, unsigned long* lpNumberOfBytesTransferred, unsigned long dwMilliseconds, BOOL bAlertable);
MYLIB_EXPORT Win32Result GetPhysicallyInstalledSystemMemory_Wrapper(unsigned long long* totalMemoryInKilobytes);
MYLIB_EXPORT Win32Result GetProcAddress_Wrapper(HMODULE hModule, PCSTR lpProcName);
MYLIB_EXPORT Win32Result GetProcessHeap_Wrapper();
MYLIB_EXPORT Win32Result GetProcessHeaps_Wrapper(unsigned long numberOfHeaps, HANDLE* processHeaps);
MYLIB_EXPORT Win32Result GetProcessId_Wrapper(HANDLE process);
MYLIB_EXPORT Win32Result GetProcessShutdownParameters_Wrapper(unsigned long* lpdwLevel, unsigned long* lpdwFlags);
MYLIB_EXPORT Win32Result GetProcessTimes_Wrapper(HANDLE hProcess, FILETIME* lpCreationTime, FILETIME* lpExitTime, FILETIME* lpKernelTime, FILETIME* lpUserTime);
MYLIB_EXPORT Win32Result GetProcessVersion_Wrapper(unsigned long processId);
MYLIB_EXPORT Win32Result GetProcessWorkingSetSize_Wrapper(HANDLE hProcess, unsigned long long* lpMinimumWorkingSetSize, unsigned long long* lpMaximumWorkingSetSize);
MYLIB_EXPORT Win32Result GetQueuedCompletionStatus_Wrapper(HANDLE completionPort, unsigned long* lpNumberOfBytesTransferred, unsigned long long* lpCompletionKey, OVERLAPPED** lpOverlapped, unsigned long dwMilliseconds);
MYLIB_EXPORT Win32Result GetQueuedCompletionStatusEx_Wrapper(HANDLE completionPort, OVERLAPPED_ENTRY* lpCompletionPortEntries, unsigned long ulCount, unsigned long* ulNumEntriesRemoved, unsigned long dwMilliseconds, BOOL fAlertable);
MYLIB_EXPORT Win32Result GetShortPathNameW_Wrapper(PCWSTR lpszLongPath, PWSTR lpszShortPath, unsigned long cchBuffer);
MYLIB_EXPORT Win32Result GetStdHandle_Wrapper(DWORD nStdHandle);
MYLIB_EXPORT Win32Result GetSystemDefaultLocaleName_Wrapper(PWSTR lpLocaleName, int cchLocaleName);
MYLIB_EXPORT Win32Result GetSystemDirectoryW_Wrapper(PWSTR lpBuffer, unsigned long uSize);
MYLIB_EXPORT Win32Result GetSystemPowerStatus_Wrapper(SYSTEM_POWER_STATUS* lpSystemPowerStatus);
MYLIB_EXPORT Win32Result GetSystemTimeAdjustment_Wrapper(unsigned long* lpTimeAdjustment, unsigned long* lpTimeIncrement, BOOL* lpTimeAdjustmentDisabled);
MYLIB_EXPORT Win32Result GetSystemTimes_Wrapper(FILETIME* lpIdleTime, FILETIME* lpKernelTime, FILETIME* lpUserTime);
MYLIB_EXPORT Win32Result GetTempFileNameW_Wrapper(PCWSTR lpPathName, PCWSTR lpPrefixString, unsigned long uUnique, PWSTR lpTempFileName);
MYLIB_EXPORT Win32Result GetTempPathW_Wrapper(unsigned long nBufferLength, PWSTR lpBuffer);
MYLIB_EXPORT Win32Result GetThreadId_Wrapper(HANDLE thread);
MYLIB_EXPORT Win32Result GetThreadTimes_Wrapper(HANDLE hThread, FILETIME* lpCreationTime, FILETIME* lpExitTime, FILETIME* lpKernelTime, FILETIME* lpUserTime);
MYLIB_EXPORT Win32Result GetUserDefaultLocaleName_Wrapper(PWSTR lpLocaleName, int cchLocaleName);
MYLIB_EXPORT Win32Result GetVolumeInformationW_Wrapper(PCWSTR lpRootPathName, PWSTR lpVolumeNameBuffer, unsigned long nVolumeNameSize, unsigned long* lpVolumeSerialNumber, unsigned long* lpMaximumComponentLength, unsigned long* lpFileSystemFlags, PWSTR lpFileSystemNameBuffer, unsigned long nFileSystemNameSize);
MYLIB_EXPORT Win32Result GetVolumeInformationByHandleW_Wrapper(HANDLE hFile, PWSTR lpVolumeNameBuffer, unsigned long nVolumeNameSize, unsigned long* lpVolumeSerialNumber, unsigned long* lpMaximumComponentLength, unsigned long* lpFileSystemFlags, PWSTR lpFileSystemNameBuffer, unsigned long nFileSystemNameSize);
MYLIB_EXPORT Win32Result GetVolumeNameForVolumeMountPointW_Wrapper(PCWSTR lpszVolumeMountPoint, PWSTR lpszVolumeName, unsigned long cchBufferLength);
MYLIB_EXPORT Win32Result GetVolumePathNameW_Wrapper(PCWSTR lpszFileName, PWSTR lpszVolumePathName, unsigned long cchBufferLength);
MYLIB_EXPORT Win32Result GetVolumePathNamesForVolumeNameW_Wrapper(PCWSTR lpszVolumeName, PWSTR lpszVolumePathNames, unsigned long cchBufferLength, unsigned long* lpcchReturnLength);
MYLIB_EXPORT Win32Result GlobalAlloc_Wrapper(DWORD uFlags, unsigned long long dwBytes);
MYLIB_EXPORT Win32Result GlobalFree_Wrapper(HGLOBAL hMem);
MYLIB_EXPORT Win32Result GlobalLock_Wrapper(HGLOBAL hMem);
MYLIB_EXPORT Win32Result GlobalMemoryStatusEx_Wrapper(MEMORYSTATUSEX* lpBuffer);
MYLIB_EXPORT Win32Result GlobalSize_Wrapper(HGLOBAL hMem);
MYLIB_EXPORT Win32Result GlobalUnlock_Wrapper(HGLOBAL hMem);
MYLIB_EXPORT Win32Result HeapCompact_Wrapper(HANDLE hHeap, DWORD dwFlags);
MYLIB_EXPORT Win32Result HeapCreate_Wrapper(DWORD flOptions, unsigned long long dwInitialSize, unsigned long long dwMaximumSize);
MYLIB_EXPORT Win32Result HeapDestroy_Wrapper(HANDLE hHeap);
MYLIB_EXPORT Win32Result HeapFree_Wrapper(HANDLE hHeap, DWORD dwFlags, void* lpMem);
MYLIB_EXPORT Win32Result HeapLock_Wrapper(HANDLE hHeap);
MYLIB_EXPORT Win32Result HeapQueryInformation_Wrapper(HANDLE heapHandle, LONG heapInformationClass, void* heapInformation, unsigned long long heapInformationLength, unsigned long long* returnLength);
MYLIB_EXPORT Win32Result HeapSetInformation_Wrapper(HANDLE heapHandle, LONG heapInformationClass, void* heapInformation, unsigned long long heapInformationLength);