packages/win32/lib/src/_internal/kernel32.g.dart


@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result GetLargestConsoleWindowSize_Wrapper(
  int hConsoleOutput,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32, PWSTR, Int32)>()
external NativeWin32Result GetLocaleInfoEx_Wrapper(
  PCWSTR lpLocaleName,
  int lCType,
  PWSTR lpLCData,
  int cchData,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetLogicalDrives_Wrapper();

@internal
@Native<NativeWin32Result Function(Uint32, PWSTR)>()
external NativeWin32Result GetLogicalDriveStringsW_Wrapper(
  int nBufferLength,
  PWSTR lpBuffer,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<SYSTEM_LOGICAL_PROCESSOR_INFORMATION>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result GetLogicalProcessorInformation_Wrapper(
  Pointer<SYSTEM_LOGICAL_PROCESSOR_INFORMATION> buffer,
  Pointer<Uint32> returnedLength,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result GetLongPathNameW_Wrapper(
  PCWSTR lpszShortPath,
  PWSTR lpszLongPath,
  int cchBuffer,
);

@internal
@Native<NativeWin32Result Function(Uint16)>()
external NativeWin32Result GetMaximumProcessorCount_Wrapper(int groupNumber);

@internal
@Native<NativeWin32Result Function(HMODULE, PWSTR, Uint32)>()
external NativeWin32Result GetModuleFileNameW_Wrapper(
  int hModule,
  PWSTR lpFilename,
  int nSize,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result GetModuleHandleW_Wrapper(PCWSTR lpModuleName);

@internal
@Native<NativeWin32Result Function(Uint32, PCWSTR, Pointer<HMODULE>)>()
external NativeWin32Result GetModuleHandleExW_Wrapper(
  int dwFlags,
  PCWSTR lpModuleName,
  Pointer<HMODULE> phModule,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetNamedPipeClientProcessId_Wrapper(
  int pipe,
  Pointer<Uint32> clientProcessId,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetNamedPipeClientSessionId_Wrapper(
  int pipe,
  Pointer<Uint32> clientSessionId,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result GetNamedPipeInfo_Wrapper(
  int hNamedPipe,
  Pointer<Uint32> lpFlags,
  Pointer<Uint32> lpOutBufferSize,
  Pointer<Uint32> lpInBufferSize,
  Pointer<Uint32> lpMaxInstances,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetNumberOfConsoleInputEvents_Wrapper(
  int hConsoleInput,
  Pointer<Uint32> lpNumberOfEvents,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer<OVERLAPPED>, Pointer<Uint32>, BOOL)
>()
external NativeWin32Result GetOverlappedResult_Wrapper(
  int hFile,
  Pointer<OVERLAPPED> lpOverlapped,
  Pointer<Uint32> lpNumberOfBytesTransferred,
  int bWait,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<OVERLAPPED>,
    Pointer<Uint32>,
    Uint32,
    BOOL,
  )
>()
external NativeWin32Result GetOverlappedResultEx_Wrapper(
  int hFile,
  Pointer<OVERLAPPED> lpOverlapped,
  Pointer<Uint32> lpNumberOfBytesTransferred,
  int dwMilliseconds,
  int bAlertable,
);

@internal
@Native<NativeWin32Result Function(Pointer<Uint64>)>()
external NativeWin32Result GetPhysicallyInstalledSystemMemory_Wrapper(
  Pointer<Uint64> totalMemoryInKilobytes,
);

@internal
@Native<NativeWin32Result Function(HMODULE, PCSTR)>()
external NativeWin32Result GetProcAddress_Wrapper(
  int hModule,
  PCSTR lpProcName,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetProcessHeap_Wrapper();

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<HANDLE>)>()
external NativeWin32Result GetProcessHeaps_Wrapper(
  int numberOfHeaps,
  Pointer<HANDLE> processHeaps,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result GetProcessId_Wrapper(int process);

@internal
@Native<NativeWin32Result Function(Pointer<Uint32>, Pointer<Uint32>)>()
external NativeWin32Result GetProcessShutdownParameters_Wrapper(
  Pointer<Uint32> lpdwLevel,
  Pointer<Uint32> lpdwFlags,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
  )
>()
external NativeWin32Result GetProcessTimes_Wrapper(
  int hProcess,
  Pointer<FILETIME> lpCreationTime,
  Pointer<FILETIME> lpExitTime,
  Pointer<FILETIME> lpKernelTime,
  Pointer<FILETIME> lpUserTime,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result GetProcessVersion_Wrapper(int processId);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<IntPtr>, Pointer<IntPtr>)>()
external NativeWin32Result GetProcessWorkingSetSize_Wrapper(
  int hProcess,
  Pointer<IntPtr> lpMinimumWorkingSetSize,
  Pointer<IntPtr> lpMaximumWorkingSetSize,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint32>,
    Pointer<IntPtr>,
    Pointer<Pointer<OVERLAPPED>>,
    Uint32,
  )
>()
external NativeWin32Result GetQueuedCompletionStatus_Wrapper(
  int completionPort,
  Pointer<Uint32> lpNumberOfBytesTransferred,
  Pointer<IntPtr> lpCompletionKey,
  Pointer<Pointer<OVERLAPPED>> lpOverlapped,
  int dwMilliseconds,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<OVERLAPPED_ENTRY>,
    Uint32,
    Pointer<Uint32>,
    Uint32,
    BOOL,
  )
>()
external NativeWin32Result GetQueuedCompletionStatusEx_Wrapper(
  int completionPort,
  Pointer<OVERLAPPED_ENTRY> lpCompletionPortEntries,
  int ulCount,
  Pointer<Uint32> ulNumEntriesRemoved,
  int dwMilliseconds,
  int fAlertable,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result GetShortPathNameW_Wrapper(
  PCWSTR lpszLongPath,
  PWSTR lpszShortPath,
  int cchBuffer,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result GetStdHandle_Wrapper(int nStdHandle);

@internal
@Native<NativeWin32Result Function(PWSTR, Int32)>()
external NativeWin32Result GetSystemDefaultLocaleName_Wrapper(
  PWSTR lpLocaleName,
  int cchLocaleName,
);

@internal
@Native<NativeWin32Result Function(PWSTR, Uint32)>()
external NativeWin32Result GetSystemDirectoryW_Wrapper(
  PWSTR lpBuffer,
  int uSize,
);

@internal
@Native<NativeWin32Result Function(Pointer<SYSTEM_POWER_STATUS>)>()
external NativeWin32Result GetSystemPowerStatus_Wrapper(
  Pointer<SYSTEM_POWER_STATUS> lpSystemPowerStatus,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<Uint32>, Pointer<Uint32>, Pointer<BOOL>)
>()
external NativeWin32Result GetSystemTimeAdjustment_Wrapper(
  Pointer<Uint32> lpTimeAdjustment,
  Pointer<Uint32> lpTimeIncrement,
  Pointer<BOOL> lpTimeAdjustmentDisabled,
);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
  )
>()
external NativeWin32Result GetSystemTimes_Wrapper(
  Pointer<FILETIME> lpIdleTime,
  Pointer<FILETIME> lpKernelTime,
  Pointer<FILETIME> lpUserTime,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, Uint32, PWSTR)>()
external NativeWin32Result GetTempFileNameW_Wrapper(
  PCWSTR lpPathName,
  PCWSTR lpPrefixString,
  int uUnique,
  PWSTR lpTempFileName,
);

@internal
@Native<NativeWin32Result Function(Uint32, PWSTR)>()
external NativeWin32Result GetTempPathW_Wrapper(
  int nBufferLength,
  PWSTR lpBuffer,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result GetThreadId_Wrapper(int thread);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
    Pointer<FILETIME>,
  )
>()
external NativeWin32Result GetThreadTimes_Wrapper(
  int hThread,
  Pointer<FILETIME> lpCreationTime,
  Pointer<FILETIME> lpExitTime,
  Pointer<FILETIME> lpKernelTime,
  Pointer<FILETIME> lpUserTime,
);

@internal
@Native<NativeWin32Result Function(PWSTR, Int32)>()
external NativeWin32Result GetUserDefaultLocaleName_Wrapper(
  PWSTR lpLocaleName,
  int cchLocaleName,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    PWSTR,
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
    PWSTR,
    Uint32,
  )
>()
external NativeWin32Result GetVolumeInformationW_Wrapper(
  PCWSTR lpRootPathName,
  PWSTR lpVolumeNameBuffer,
  int nVolumeNameSize,
  Pointer<Uint32> lpVolumeSerialNumber,
  Pointer<Uint32> lpMaximumComponentLength,
  Pointer<Uint32> lpFileSystemFlags,
  PWSTR lpFileSystemNameBuffer,
  int nFileSystemNameSize,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    PWSTR,
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
    PWSTR,
    Uint32,
  )
>()
external NativeWin32Result GetVolumeInformationByHandleW_Wrapper(
  int hFile,
  PWSTR lpVolumeNameBuffer,
  int nVolumeNameSize,
  Pointer<Uint32> lpVolumeSerialNumber,
  Pointer<Uint32> lpMaximumComponentLength,
  Pointer<Uint32> lpFileSystemFlags,
  PWSTR lpFileSystemNameBuffer,
  int nFileSystemNameSize,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result GetVolumeNameForVolumeMountPointW_Wrapper(
  PCWSTR lpszVolumeMountPoint,
  PWSTR lpszVolumeName,
  int cchBufferLength,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result GetVolumePathNameW_Wrapper(
  PCWSTR lpszFileName,
  PWSTR lpszVolumePathName,
  int cchBufferLength,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32, Pointer<Uint32>)>()
external NativeWin32Result GetVolumePathNamesForVolumeNameW_Wrapper(
  PCWSTR lpszVolumeName,
  PWSTR lpszVolumePathNames,
  int cchBufferLength,
  Pointer<Uint32> lpcchReturnLength,
);

@internal
@Native<NativeWin32Result Function(Uint32, IntPtr)>()
external NativeWin32Result GlobalAlloc_Wrapper(int uFlags, int dwBytes);

@internal
@Native<NativeWin32Result Function(HGLOBAL)>()
external NativeWin32Result GlobalFree_Wrapper(int hMem);

@internal
@Native<NativeWin32Result Function(HGLOBAL)>()
external NativeWin32Result GlobalLock_Wrapper(int hMem);

@internal
@Native<NativeWin32Result Function(Pointer<MEMORYSTATUSEX>)>()
external NativeWin32Result GlobalMemoryStatusEx_Wrapper(
  Pointer<MEMORYSTATUSEX> lpBuffer,
);

@internal
@Native<NativeWin32Result Function(HGLOBAL)>()
external NativeWin32Result GlobalSize_Wrapper(int hMem);

@internal
@Native<NativeWin32Result Function(HGLOBAL)>()
external NativeWin32Result GlobalUnlock_Wrapper(int hMem);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result HeapCompact_Wrapper(int hHeap, int dwFlags);

@internal
@Native<NativeWin32Result Function(Uint32, IntPtr, IntPtr)>()
external NativeWin32Result HeapCreate_Wrapper(
  int flOptions,
  int dwInitialSize,
  int dwMaximumSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result HeapDestroy_Wrapper(int hHeap);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Pointer)>()
external NativeWin32Result HeapFree_Wrapper(
  int hHeap,
  int dwFlags,
  Pointer lpMem,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result HeapLock_Wrapper(int hHeap);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Int32, Pointer, IntPtr, Pointer<IntPtr>)
>()
external NativeWin32Result HeapQueryInformation_Wrapper(
  int heapHandle,
  int heapInformationClass,
  Pointer heapInformation,
  int heapInformationLength,
  Pointer<IntPtr> returnLength,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Int32, Pointer, IntPtr)>()
external NativeWin32Result HeapSetInformation_Wrapper(
  int heapHandle,
  int heapInformationClass,
  Pointer heapInformation,
  int heapInformationLength,
);
